# multirun-aspect_rules_py-repro

./: .bazelrc  BUILD.bazel  MODULE.bazel
bar/: BUILD.bazel  baz.py
foo/: BUILD.bazel  __main__.py
