bazel_dep(name = "rules_multirun", version = "0.14.0")
bazel_dep(name = "aspect_rules_py", version = "2.0.0-alpha.4")
bazel_dep(name = "aspect_gazelle_prebuilt", version = "0.0.22")

interpreters = use_extension("@aspect_rules_py//py:extensions.bzl", "python_interpreters")
interpreters.toolchain(python_version = "3.14")
use_repo(interpreters, "python_interpreters")
register_toolchains("@python_interpreters//:all")
